--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tasnim Jamé Masjid</title>
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="images\finished logo.png">
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -107,20 +107,19 @@
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About us</span>
-          <span class="heading-sec__sub">
-            ...
+          <span style="position: relative; text-align: center;" class="heading-sec__sub">
+            This masjid was established in 2010, and has continued to serve the community in and around Dagenham,
+            alongside fostering warm ties of mutual understanding and integration with the wider London community.
           </span>
         </h2>
         <div class="about__content">
           <div class="about__content-main">
-            <h3 class="about__content-title">We are a mosque located in Dagenahm with beautiful facilities</h3>
+            <h3 style="position: relative; left: 35px;" class="about__content-title"></h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
               </p>
             </div>
-            <a href="" class="btn btn--med btn--theme dynamicBgClr"
-              >Contact us</a
-            >
+            <a href="" style="position: relative; left: 90px;" class="btn btn--med btn--theme dynamicBgClr"> Contact us</a>
           </div>
         </div>
       </div>
@@ -187,7 +186,7 @@
       <div class="main-container">
         <div class="main-footer__upper">
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">TASNIM JAMÉ MASJID</h4>
+            <h4 class="heading heading-sm text-lt"></h4>
             <p class="main-footer__short-desc">
              
             </p>
