--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="css/style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -158,8 +160,7 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
               </p>
-            </div>
-            <a href="" style="position: relative; left: 90px;" class="btn btn--med btn--theme dynamicBgClr"> Contact us</a>
+            <a href="index.html" style="position: relative; margin: auto; ;" class="btn btn--med btn--theme dynamicBgClr"> Contact us</a>
           </div>
         </div>
       </div>
@@ -172,7 +173,7 @@
             These are the prayer times for this mosque
           </span>
         </h2>
-
+        <button style="font-size: 20px; position: relative; bottom: 30px; transform: translate(-50% , -50%);" class="btn"><i class="fa fa-download"></i> Download</button>
         <div class="projects__content">
         <!--Prayer times section-->
         <div style="position: relative; border: 2px solid black; text-align: center; width: 90%;
