Included dowload feature for download button...waiting for timetable

--- a/index.html
+++ b/index.html
@@ -173,9 +173,13 @@
             These are the prayer times for this mosque
           </span>
         </h2>
-        <button style="font-size: 20px; position: relative; bottom: 30px; transform: translate(-50% , -50%);" class="btn"><i class="fa fa-download"></i> Download</button>
+        <button style="font-size: 20px; position: relative; bottom: 30px;" 
+          class="btn"><i class="fa fa-download"></i> 
+          <a href="#" download="Prayer time table 2022">Download</a> 
+        </button>
+
         <div class="projects__content">
-        <!--Prayer times section-->
+      <!--Prayer times section-->
         <div style="position: relative; border: 2px solid black; text-align: center; width: 90%;
     margin: 0 auto; font-size: 20px;">
         <table class="table">
